# rust-sloth

./: Cargo.toml  LICENSE.md  README.md  hello.txt  test.txt
.github/workflows/: rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/rasterizer/: Cargo.toml
crates/rasterizer/src/: context.rs  geom.rs  lib.rs
models/: Pikachu.mtl  cube.mtl  cube.stl  discobole.mtl  ferris.blend  ferris.blend1  ferris.mtl  part.stl  skull.mtl  suzy.mtl
src/: bin.rs  context.rs  geometry.rs  inputs.rs  lib.rs  main.rs  rasterizer.rs  shaders.rs  sloth.rs
src-webify/: data.js  index.html  render.js
src/base/: context.rs  geometry.rs  mod.rs  rasterizer.rs  sloth.rs
src/cli/: mod.rs
src/rasterizer/: geom.rs  mod.rs  shader.rs
