[package]
name = "sloth"
version = "0.1.0"
authors = ["Mitchell Hynes <mitchell.hynes@ecumene.xyz>"]
edition = "2021"

[lib]
name = "sloth"
path = "src/lib.rs"

[[bin]]
name = "sloth"
path = "src/bin.rs"
features = ["binary"]

[dependencies.binary]
cli = {path = "crates/cli"}
rasterizer = {path = "crates/rasterizer"}
glam = "0.23.0"
tobj = "3.2.4"
