[package]
name = "sloth"
version = "0.2.0"
license = "MIT"
description = "A 3D Renderer for the CLI"
repository = "https://github.com/ecumene/rust-sloth"
authors = ["Mitchell Hynes <mitchell.hynes@ecumene.xyz>"]
edition = "2021"
exclude = ["/models", "preview.gif"]

[features]
build-cli = ["clap"]

[lib]
name = "sloth"

[[bin]]
name = "sloth"
required-features = ["build-cli"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"], optional = true }
stl_io = "0.7.0"
crossterm = "0.26.1"
glam = "0.23.0"
tobj = "3.2.4"
