[package]
name = "rendersloth"
version = "0.2.4"
license = "MIT"
description = "A 3D Renderer for the CLI"
repository = "https://github.com/ecumene/rust-sloth"
authors = ["Mitchell Hynes <mitchell.hynes@ecumene.xyz>"]
edition = "2021"
exclude = ["/models", "preview.gif"]

[features]
build-cli = ["clap"]
tui-widget = ["tui"]

[lib]
name = "rendersloth"

[[bin]]
name = "rendersloth"
required-features = ["build-cli"]

[dependencies]
clap = { version = "4.1.8", features = ["derive"], optional = true }
tui = { version = "0.19", optional = true }
stl_io = "0.7"
crossterm = "0.26.1"
glam = "0.23"
tobj = "3.2.4"
kd-tree = "0.5.1"
typenum = "1.16.0"
